@@ -1,3 +1,10 @@
+2003-07-03  JP Rosevear  <jpr@ximian.com>
+
+	* e-xml-hash-utils.c (foreach_save_func): encode the text
+	(e_xml_from_hash): pass xmlDoc to foreach method
+	(e_xmlhash_new): check for file existence
+	(e_xmlhash_destroy): only destroy the hash if it exists
+
 2003-06-19  Dan Winship  <danw@ximian.com>
 
 	* e-xml-hash-utils.c (e_xml_to_hash): don't leak an extra copy of
